2003-09-16 Jackson Harper <jackson@latitudegeo.com>

	* InstrTable.cs: endfault instruction (which is just endfinally
	with a costume on).
	
2003-09-15 Jackson Harper <jackson@latitudegeo.com>

	* FinallyBlock.cs: The sad thing is how long it took me to realize
	what was going on here...
		
2003-09-13 Jackson Harper <jackson@latitudegeo.com>

	* MethodInstr.cs: callvirt operation is implicitly instance.
	
2003-09-12 Jackson Harper <jackson@latitudegeo.com>

	* TypeRef.cs: Remove unused enum, this has been moved to the
	ModifiableType base class.
	
2003-09-08 Jackson Harper <jackson@latitudegeo.com>

	* TypeDef.cs: By default types will have System.Object as their
	parent type if no parent type is specified (this is what PEAPI
	does) however if we are assembling corlib the System.Object type
	will not have System.Object as its parent type.
	
2003-08-19 Jackson Harper <jackson@latitudegeo.com>

	* DataDef.cs: Make name public so data names can be looked up
	* FieldDef.cs: Stub method for adding data values
	* TypeDef.cs: Implement long form overrides, fix some backwords
	variable naming, add a method to lookup data definitions.
	
2003-08-19 Jackson Harper <jackson@latitudegeo.com>

	* IClassRef.cs: Removed methods that have been moved into ITypeRef
	* MethodDef.cs: Make some properties public, Add method to get a
	list of parameter types. This is used to build signatures. Alow
	sentinels in signatures and in param lists. Fix some tabbing.
	* ParamDef.cs: Expose the parameters type so they can be used when
	building signatures.
	* TypeDef.cs: Add and emit overrides.
		
2003-08-10 Jackson Harper <jackson@latitudegeo.com>

	* CodeGen.cs: Fix tabbing
	* ModifiableType.cs: Modify a types signature when the type is
	modified instead of waiting untill the end. Signatures need to be
	modified immediatly because they are used in method signatures and
	would fail for overloaded operations if sigs weren't modified
	right away.